modified build script to include bln liblights

--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -100,6 +100,7 @@ CONFIG_BACKLIGHT_GENERIC=Y
 CONFIG_CPU_FREQ_TABLE=Y
 CONFIG_TEXTSEARCH_BM=Y
 CONFIG_PPP_MPPE=Y
+CONFIG_BCM2079X_NFC_I2C=Y
 CONFIG_RFKILL=Y
 CONFIG_NET_KEY=Y
 CONFIG_IOSCHED_DEADLINE=Y
