--- a/arch/arm/configs/vikinger_defconfig
+++ b/arch/arm/configs/vikinger_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Vikinger"
+CONFIG_LOCALVERSION="-vikinger"
 CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_RCU_FAST_NO_HZ=y
@@ -104,15 +104,6 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-CONFIG_CPU_FREQ_GOV_BADASS=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_SEC_DVFS=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -230,17 +221,7 @@ CONFIG_NET_EMATCH_META=y
 CONFIG_NET_EMATCH_TEXT=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_BT=y
-# CONFIG_BT_RFCOMM is not set
-# CONFIG_BT_RFCOMM_TTY is not set
-# CONFIG_BT_BNEP is not set
-# CONFIG_BT_BNEP_MC_FILTER is not set
-# CONFIG_BT_BNEP_PROTO_FILTER is not set
 CONFIG_BT_HIDP=y
-# CONFIG_BT_HCISMD is not set
-# CONFIG_BT_HCIUART it not set
-# CONFIG_BT_HCIUART_H4 is not set
-# CONFIG_BT_HCIUART_ATH3K is not set
-# CONFIG_BT_HCIUART_IBS is not set
 # CONFIG_MSM_BT_POWER is not set
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
@@ -471,6 +452,7 @@ CONFIG_SENSOR_USE_SYMLINK=y
 CONFIG_EXT4_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=m
 CONFIG_TMPFS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_WTL_ENCRYPTION_FILTER=y
