--- a/arch/arm/configs/vikinger_defconfig
+++ b/arch/arm/configs/vikinger_defconfig
@@ -1,7 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Vikinger"
+CONFIG_LOCALVERSION="-Vikinge"
 CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_RCU_FAST_NO_HZ=y
