--- a/arch/arm/configs/vikinger_defconfig
+++ b/arch/arm/configs/vikinger_defconfig
@@ -419,7 +419,6 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_PM8XXX=y
 CONFIG_STAGING=y
 CONFIG_ZRAM=y
-CONFIG_ZRAM_FOR_ANDROID=y
 CONFIG_ZCACHE=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
@@ -451,7 +450,7 @@ CONFIG_SENSOR_USE_SYMLINK=y
 CONFIG_EXT4_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_EXFAT_FS=m
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_ECRYPT_FS=y
 CONFIG_WTL_ENCRYPTION_FILTER=y
@@ -475,6 +474,8 @@ CONFIG_TIMER_STATS=y
 CONFIG_SCHED_TRACER=y
 # CONFIG_SEC_DEBUG_USER is not set
 CONFIG_PID_IN_CONTEXTIDR=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_CRYPTO_AES_ARM=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=m
